--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: ZipPluginLoader
 main: ZipPluginLoader\Main
-version: 1.2.1
+version: [2.0.0, 2.1.0, 3.0.0, 3.0.0-ALPHA1, 3.0.0-ALPHA2]
 api: 2.0.0
 load: STARTUP
 author: aliuly
